--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "jsdoc": "^4.0.4",
     "mongoose": "^8.10.1",
     "nodemon": "^3.1.9",
+    "swagger": "^0.7.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
